Added recording padding fix

--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -14,7 +14,9 @@
     <div class="col-1-2">
         <h3 class="headline">{{ title }}</h3>
 
-        {{ content }}
+        <div class="pad-vertical">
+            {{ content }}
+        </div>
 
         {{ if show_details }}
         <table>
