Added quote tweaks

--- a/_themes/tm3/partials/quote.html
+++ b/_themes/tm3/partials/quote.html
@@ -1,4 +1,4 @@
-<figure class="quote">
+<figure class="quote pad">
     <blockquote class="headline">{{ content|widont|smartypants }}</blockquote>
 
     <figcaption>
