--- a/_themes/tm3/css/map.css
+++ b/_themes/tm3/css/map.css
@@ -20,6 +20,7 @@
     .gm-style-iw .h-event
     {
         border: 0;
+        font-size: 15px;
         margin-bottom: 0;
         padding: 0;
     }
