--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -23,7 +23,6 @@ strong { font-weight: 400; }
 {
     font-size: 2.25em;
     font-weight: 400;
-    letter-spacing: 0;
     line-height: 2.25em;
     margin: 0;
 }
@@ -32,7 +31,6 @@ strong { font-weight: 400; }
 {
     font-size: 2.1em;
     font-weight: 400;
-    letter-spacing: 0;
     margin: 0;
 }
 
@@ -40,8 +38,7 @@ strong { font-weight: 400; }
 {
     font-size: 1.5em;
     font-weight: 400;
-    letter-spacing: 0;
-    line-height: 2rem;
+    line-height: 2em;
     margin: 0;
 }
 
@@ -49,16 +46,14 @@ strong { font-weight: 400; }
 {
     font-size: 1.25em;
     font-weight: 700;
-    letter-spacing: 0;
     line-height: 1.55em;
     margin: 0;
 }
 
 .subhead
 {
-    font-size: 1.1em;
+    font-size: 1em;
     font-weight: 400;
-    letter-spacing: 0;
     line-height: 1.5em;
     margin: 0;
 }
@@ -66,7 +61,7 @@ strong { font-weight: 400; }
 .body-2,
 .body-1
 {
-    font-size: rem;
+    font-size: 1em;
     letter-spacing: 0;
     line-height: 1.5em;
     margin: 0;
