--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -18,6 +18,8 @@
         <div class="pad">
             <h2 class="display-1">{{ downloads_title }}</h2>
 
+            <p class="body-1 pad-vertical">Download photos or biographies</p>
+
             {{ if downloads }}
                 {{ downloads }}
                 {{ if index|%:2 == 1 and index > 1 }}</div>{{ /if }}
