--- a/_themes/tm3/css/contact.css
+++ b/_themes/tm3/css/contact.css
@@ -1,3 +1,8 @@
+#content
+{
+    padding-top: 40px;
+}
+
 .hero
 {
     background-position: bottom center;
@@ -8,7 +13,11 @@
 
 .tile
 {
-    bottom: 0;
+    bottom: 20px;
     position: absolute;
     z-index: 1;
 }
+
+.tile:last-of-type { bottom: 0; }
+
+.vcard * { color: #fff; }
