Added new quotes to Adams page

--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -42,7 +42,7 @@
         {{ /if }}
 
         {{ if show_learn_more }}
-        <div class="text-center">
+        <div class="text-center margin-vertical">
             <a class="button link" href="/recordings">All Recordings</a>
         </div>
         {{ /if }}
