--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -17,7 +17,7 @@
         {{ content }}
 
         {{ if show_details }}
-        <table>
+        <table class="margin-vertical">
             <tbody>
                 {{ if datestamp }}
                 <tr>
@@ -43,7 +43,7 @@
 
         {{ if show_learn_more }}
         <div class="text-center margin-vertical">
-            <a class="button link" href="/recordings">All Recordings</a>
+            <a class="button border" href="/recordings">All Recordings</a>
         </div>
         {{ /if }}
     </div>
