Adjusted live recordings layout to display the image anchored at the bottom of the page. More quote font size fixes.

--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -59,6 +59,8 @@
     border-radius: 128px;
 }
 
+.button.border.sample.small { border-width: 2px !important; }
+
 .button.sample[data-icon]::before
 {
     display: block;
@@ -78,7 +80,7 @@
 
 .button.sample.small.positioned { margin-top: -22px; }
 
-.button.border:hover { background-color: #202020; color: #FFF; }
+.button.border:hover { background-color: rgba(0, 0, 0, 0.5); color: #FFF; }
 
 @media (min-width: 768px)
 {
