--- a/_themes/tm3/css/layout.css
+++ b/_themes/tm3/css/layout.css
@@ -115,6 +115,8 @@ footer [data-icon]::before
         position: relative;
     }
 
+    [class*='col-']:last-of-type { padding-right: 0; }
+
     .col-1-8 { width: 12.5%; }
     .col-1-7 { width: 14.28571429%; }
     .col-1-6 { width: 16.66666667%; }
