Fixed layout issues on Adams page

--- a/_themes/tm3/partials/performance.html
+++ b/_themes/tm3/partials/performance.html
@@ -16,7 +16,7 @@
                 <span class="year">{{ datestamp format="Y" }}</span>
             </time>
 
-            {{ if event_time }}<span class="time secondary-text pad-half-vertical">{{ event_time format="{{ _time_format }}" }}</span>{{ /if }}
+            {{ if event_time }}<span class="time">{{ event_time format="{{ _time_format }}" }}</span>{{ /if }}
         </div>
     </div>
 
