--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -11,7 +11,7 @@
         <a class="button expand link pad-half-vertical" href="{{ recording_url }}" target="_blank" title="{{ publisher_title }}">More Information</a>
         {{ /if }}
     </div>
-    <div class="col-1-2">
+    <div class="col-1-2 pad-horizontal">
         <h3 class="headline">{{ title }}</h3>
 
         {{ content }}
