--- a/_themes/tm3/partials/message-form.html
+++ b/_themes/tm3/partials/message-form.html
@@ -16,7 +16,7 @@
     {{ if {raven:success} }}
         <h3 class="submission-confirmation">Your message has been sent.</h3>
     {{ else }}
-        <div class="grid">
+        <div class="row">
             <div class="col-full">
                 <input class="expand light margin-half-vertical" name="name" placeholder="Name" required type="text" value="{{ value:name }}">
             </div>
