--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -1,61 +1,55 @@
 {{ theme:partial src="hero" use_context="true" }}
 
 <main id="content" role="main" style="background-color: {{ background_color }};">
-    <div class="center-layout">
+    <div class="center-layout pad">
         {{ if booking_title }}
-        <div class="row pad">
-            <h2 class="display-1">{{ booking_title }}</h2>
+        <h2 class="display-1">{{ booking_title }}</h2>
+
+        <div class="row pad-vertical">
             <div class="col-2-3">
                 {{ theme:partial src="vcard" use_context="true" }}
             </div>
-            <div class="col-1-3 pad-vertical">
+            <div class="col-1-3">
                 {{ theme:partial src="message-form" }}
             </div>
         </div>
         {{ /if }}
 
         {{ if downloads_title }}
-        <div class="pad">
-            <h2 class="display-1">{{ downloads_title }}</h2>
+        <h2 class="display-1">{{ downloads_title }}</h2>
 
-            <div class="pad-vertical">
-                {{ if downloads }}
-                    {{ downloads }}
-                    {{ if index|%:2 == 1 and index > 1 }}</div>{{ /if }}
-                    {{ if index|%:2 == 1 }}<div class="row">{{ /if }}
-                        <div class="col-1-2">
-                            <div class="pad-half-{{ if index < 3 }}bottom{{ else }}top{{ /if }} pad-half-{{ if index|%:2 == 1}}right{{ else }}left{{ /if }}">
-                                <a href="{{ download file="{photo_download}" as="{photo_download}" }}" title="Click to download this photo"><img alt="" src="{{ photo_download }}" /></a>
-                            </div>
-                        </div>
-                    {{ /downloads }}
-                {{ /if }}
-                </div>
-
-                {{ get_content from="biography" }}
-                <div class="row pad">
-                    {{ theme:partial src="biography-downloads" use_context="true" }}
-               </div>
-                {{ /get_content }}
+        <div class="pad-vertical">
+            {{ if downloads }}
+                {{ downloads }}
+                {{ if index|%:2 == 1 and index > 1 }}</div>{{ /if }}
+                {{ if index|%:2 == 1 }}<div class="row">{{ /if }}
+                    <div class="col-1-2{{ if index|%:2 == 0 }} pad-right{{ /if }}">
+                        <a href="{{ download file="{photo_download}" as="{photo_download}" }}" title="Click to download this photo"><img alt="" src="{{ photo_download }}" /></a>
+                    </div>
+                {{ /downloads }}
+            {{ /if }}
             </div>
+
+            {{ get_content from="biography" }}
+            <div class="row pad-vertical">
+                {{ theme:partial src="biography-downloads" use_context="true" }}
+           </div>
+            {{ /get_content }}
         </div>
         {{ /if }}
 
         {{ if video_title }}
-        <div class="pad">
-            <h2 class="display-1">{{ video_title }}</h2>
-        </div>
-        <div class="pad-horizontal">
+        <h2 class="display-1">{{ video_title }}</h2>
+
+        <div class="pad-vertical">
             {{ theme:partial src="video" use_context="true" }}
         </div>
         {{ /if }}
 
         {{ if recording_title }}
-        <div class="row pad">
-            <h2 class="display-1">{{ recording_title }}</h2>
-        </div>
+        <h2 class="display-1">{{ recording_title }}</h2>
 
-        <div class="row pad-horizontal">
+        <div class="pad-vertical">
             {{ entries:listing conditions="slug:john-adams-city-noirsaxophone-concerto-david-robertsonst-louis-symphony" folder="recordings" limit="1" show_hidden="true" sort_by="datestamp" sort_dir="desc" }}
                 {{ theme:partial show_details="true" show_sample="true" src="recording" use_context="true" }}
             {{ /entries:listing }}
@@ -63,18 +57,16 @@
         {{ /if }}
 
         {{ if critics_title }}
-        <div class="pad">
-            <h2 class="display-1">{{ critics_title }}</h2>
+        <h2 class="display-1">{{ critics_title }}</h2>
 
-            <div class="row quotes">
-                {{ entries:listing conditions="adams_press:1" folder="quotes" show_hidden="true" sort_by="random" }}
-                    <div class="col-1-2">
-                        <div class="pad">
-                            {{ theme:partial src="quote" use_context="true" }}
-                        </div>
+        <div class="row quotes">
+            {{ entries:listing conditions="adams_press:1" folder="quotes" show_hidden="true" sort_by="random" }}
+                <div class="col-1-2">
+                    <div class="pad">
+                        {{ theme:partial src="quote" use_context="true" }}
                     </div>
-                {{ /entries:listing }}
-            </div>
+                </div>
+            {{ /entries:listing }}
         </div>
         {{ /if }}
     </main>
