--- a/_themes/tm3/css/home.css
+++ b/_themes/tm3/css/home.css
@@ -6,6 +6,7 @@
     {
         bottom: 0;
         left: 0;
+        padding-bottom: 0;
         position: absolute;
         right: 0;
         top: 0;
@@ -17,7 +18,6 @@
         bottom: 0;
         left: 0;
         position: absolute;
-        top: 0;
     }
 
     #live-recordings .col-1-2:last-child
