--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -71,11 +71,11 @@ strong { font-weight: 400; }
 
 /* Lists */
 .list { list-style: none; margin: 0; padding: 0; }
+.list.dark-borders li { border-bottom: 1px solid #DBDBDB; }
+.list.light li { border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
+.list.dark-borders li:last-child, .list.light li:last-child { border-bottom: 0; }
 .square { list-style: square; }
 .disc { list-style: disc; }
-.divider-dark { border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
-.divider-light { border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-.divider-dark:last-of-type, .divider-light:last-of-type { border: 0; }
 
 /* Colors */
 .callout { background-color: #353639; }
