--- a/_themes/tm3/partials/performances.html
+++ b/_themes/tm3/partials/performances.html
@@ -1,9 +1,9 @@
 <div id="map">
     <div id="map-canvas"></div>
 
-    <ol class="list scrollable" id="performance-list">
+    <ol class="list dark-borders scrollable" id="performance-list">
         {{ entries:listing folder="performances" limit="{limit}" show_future="true" show_hidden="true" since="{since}" until="{until}" sort_dir="asc" }}
-        <li class="divider-dark">{{ theme:partial src="performance" use_context="true" }}</li>
+        <li>{{ theme:partial src="performance" use_context="true" }}</li>
         {{ /entries:listing }}
     </ol>
 </div>
