--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -45,9 +45,9 @@
             <img alt="" src="{{ artwork }}">
         </div>
         <div class="col-1-2">
-            <ul class="list" id="live-recordings-list">
+            <ul class="list dark-borders" id="live-recordings-list">
                 {{ entries:listing folder="live-recordings" show_hidden="true" sort_dir="asc" }}
-                <li class="divider-dark">
+                <li>
                     <article class="row pad-half-icon-right" id="{{ slug }}">
                         <h4 class="title">{{ title }}</h4>
                         <h5 class="subhead">{{ composer }}</h5>
