--- a/_themes/tm3/templates/premieres.html
+++ b/_themes/tm3/templates/premieres.html
@@ -17,9 +17,9 @@
                         {{ endif }}
                     <h2 class="pad-vertical headline">{{ grouped_date }}</h2>
 
-                    <ul class="list">
+                    <ul class="list light-borders">
                     {{ endif }}
-                        <li class="divider-light pad-icon-left row" {{ theme:partial src="icon-list" use_context="true" }}>
+                        <li class="pad-icon-left row" {{ theme:partial src="icon-list" use_context="true" }}>
                             <h4 class="title">{{ title }}</h4>
                             <h5 class="subhead">{{ composer }}</h5>
                         </li>
@@ -30,9 +30,9 @@
                 </div>
 
                 <div class="row pad-vertical">
-                    <ul class="list" id="legend">
+                    <ul class="list light-borders" id="legend">
                         {{ entries:listing folder="premiere-categories" show_hidden="true" }}
-                        <li class="body-1 divider-light pad-half-icon-left row" data-icon="{{ icon }}">{{ title }}</li>
+                        <li class="body-1 pad-half-icon-left row" data-icon="{{ icon }}">{{ title }}</li>
                         {{ /entries:listing }}
                     </ul>
                 </div>
