More 404 layout fixes

--- a/_themes/tm3/css/404.css
+++ b/_themes/tm3/css/404.css
@@ -22,6 +22,8 @@
 
 @media (min-width: 768px)
 {
+    .fixed-hero { background-position: -550px center !important; }
+
     .hero
     {
         bottom: 0;
@@ -37,7 +39,7 @@
 
     #content
     {
-        float: left;
+        float: right;
         min-height: 625px;
         padding-top: 80px;
     }
