--- a/_themes/tm3/css/premieres.css
+++ b/_themes/tm3/css/premieres.css
@@ -22,6 +22,12 @@
         width: 50%;
     }
 
+    .hero .quotes
+    {
+        right: 24px;
+        width: auto;
+    }
+
     .hero-mask,
     .hero-mask::after,
     .hero-mask::before { display: none; }
