--- a/_themes/tm3/partials/message-form.html
+++ b/_themes/tm3/partials/message-form.html
@@ -17,19 +17,14 @@
         <h3 class="submission-confirmation">Your message has been sent.</h3>
     {{ else }}
         <div class="row">
-            <div class="col-full">
-                <input class="expand light margin-half-vertical" name="name" placeholder="Name" required type="text" value="{{ value:name }}">
-            </div>
-            <div class="col-full">
-                <input class="expand light margin-half-vertical" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
-            </div>
-            <div class="col-full">
-                <textarea class="expand light margin-half-vertical" cols="40" name="message" placeholder="Message" required rows="5">{{ value:message }}</textarea>
-            </div>
-            <div class="col-full">
-                <div class="text-center">
-                    <input class="button link" name="message-submit-button" type="submit" value="Send Message">
-                </div>
+            <input class="expand margin-half-vertical" name="name" placeholder="Name" required type="text" value="{{ value:name }}">
+
+            <input class="expand" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
+
+            <textarea class="expand margin-half-vertical" cols="40" name="message" placeholder="Message" required rows="5">{{ value:message }}</textarea>
+
+            <div class="text-center">
+                <input class="button link" name="message-submit-button" type="submit" value="Send Message">
             </div>
         </div>
     {{ /if }}
