--- a/_themes/tm3/css/contact.css
+++ b/_themes/tm3/css/contact.css
@@ -1,12 +1,8 @@
-#content
-{
-    padding-top: 40px;
-}
-
 .hero
 {
     background-position: center center;
     margin-bottom: 24px;
+    padding-top: 60px;
 }
 
 .hero:last-of-type { margin-bottom: 0; }
@@ -15,9 +11,9 @@
 {
     bottom: 20px;
     position: absolute;
-    z-index: 1;
+    z-index: 4;
 }
 
 .tile:last-of-type { bottom: 0; }
 
-.vcard * { color: #fff; }
+#content * { color: #FFF; }
