--- a/_themes/tm3/templates/contact.html
+++ b/_themes/tm3/templates/contact.html
@@ -1,10 +1,9 @@
 <main id="content" role="main">
     {{ entries:listing folder="contact" show_hidden="true" }}
-
-    <h2 class="display-1 pad">{{ title }}</h2>
-
     <div class="hero row" style="background-image: url({{ artwork }});">
         <div class="tile pad">
+            <h2 class="display-1 pad-vertical">{{ title }}</h2>
+
             {{ theme:partial src="vcard" use_context="true" }}
         </div>
 
