Adjusted column padding and fixed padding offset for video resizing.

--- a/_themes/tm3/css/forms.css
+++ b/_themes/tm3/css/forms.css
@@ -15,4 +15,4 @@ textarea
 [type]:focus,
 textarea:focus { outline: none; }
 
-.form-errors { background-color: #b0120a; }
+.form-error { background-color: #b0120a; }
