--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -6,10 +6,10 @@
         <h2 class="display-1">{{ booking_title }}</h2>
 
         <div class="row pad-vertical">
-            <div class="col-2-3">
+            <div class="col-1-2">
                 {{ theme:partial src="vcard" use_context="true" }}
             </div>
-            <div class="col-1-3">
+            <div class="col-1-2">
                 {{ theme:partial src="message-form" }}
             </div>
         </div>
@@ -23,7 +23,7 @@
                 {{ downloads }}
                 {{ if index|%:2 == 1 and index > 1 }}</div>{{ /if }}
                 {{ if index|%:2 == 1 }}<div class="row">{{ /if }}
-                    <div class="col-1-2{{ if index|%:2 == 0 }} pad-right{{ /if }}">
+                    <div class="col-1-2">
                         <a href="{{ download file="{photo_download}" as="{photo_download}" }}" title="Click to download this photo">
                             <img alt="" src="{{ photo_download }}" />
                         </a>
@@ -53,7 +53,7 @@
 
         <div class="pad-vertical">
             {{ entries:listing conditions="slug:john-adams-city-noirsaxophone-concerto-david-robertsonst-louis-symphony" folder="recordings" limit="1" show_hidden="true" sort_by="datestamp" sort_dir="desc" }}
-                {{ theme:partial show_details="true" show_sample="true" src="recording" use_context="true" }}
+                {{ theme:partial show_details="true" show_more_information="true" show_sample="true" src="recording" use_context="true" }}
             {{ /entries:listing }}
         </div>
         {{ /if }}
