--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -11,7 +11,7 @@
             {{ theme:partial src="recording" show_learn_more="true" show_sample="true" split_layout="true" use_context="true" }}
             {{ /entries:listing }}
         </div>
-        <div class="col-1-3">
+        <div class="col-1-3 pad-half-vertical">
             <div class="pad card">
                 {{ entries:listing folder="news" limit="1" sort_by="datestamp" sort_dir="desc" }}
                 {{ theme:partial src="article" truncate="true" use_context="true" }}
