--- a/_themes/tm3/css/icons.css
+++ b/_themes/tm3/css/icons.css
@@ -41,4 +41,5 @@
 [data-icon=play]::before { content: "\e60c"; }
 [data-icon=stop]::before { content: "\e60d"; }
 [data-icon=menu]::before, #menu-toggle::before { content: "\e60e"; }
+[data-icon=close]::before { content: "\e60f"; }
 [data-icon=down]::before { content: "\e604"; }
