--- a/_themes/tm3/css/utilities.css
+++ b/_themes/tm3/css/utilities.css
@@ -13,6 +13,7 @@
 .text-right { text-align: right; }
 .width-25 { width: 25%; }
 .width-50 { width: 50%; }
+.width-60 { width: 60%; }
 .width-75 { width: 75%; }
 
 .overflow-hidden
