--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -1,12 +1,15 @@
 <article id="{{ slug }}">
     <div class="row">
         <div class="col-1-2">
-            {{ if recording_url }}<a href="{{ recording_url }}" title="{{ publisher_title }}" target="_blank">{{ /if }}
             <div class="row">
-                <img alt="{{ title }}" class="center" src="{{ artwork }}">
-                {{ if show_sample && sample }}<a class="button border center light sample" data-icon="play" href="{{ sample }}">Play</a>{{ /if }}
+                {{ if recording_url }}<a href="{{ recording_url }}" title="{{ publisher_title }}" target="_blank">{{ /if }}
+                    <img alt="{{ title }}" class="center" src="{{ artwork }}">
+                {{ if recording_url }}</a>{{ /if }}
+
+                {{ if show_sample && sample }}
+                <a class="button border center light sample" data-icon="play" href="{{ sample }}">Play</a>
+                {{ /if }}
             </div>
-            {{ if recording_url }}</a>{{ /if }}
         </div>
         <div class="col-1-2">
             <h3 class="headline">{{ title|widont }}</h3>
